Drop Down Menu for More Options

--- a/Client/Pages/index.html
+++ b/Client/Pages/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DROMED</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="navBar">
@@ -17,7 +19,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="homeService.html">Home Services</a></li>
                 <li><a href="realTracking.html">Real-Time Tracking</a></li>
-                <li><a href="">More Options ▼</a></li>
+                <li><a href="" id="moreOpt">More Options ▼</a></li>
             </ul>
         </div>
 
@@ -30,7 +32,47 @@
         </div>
     </div>
 
+    <div class="dropdownNav">
+        <div class="col">
+            <div class="colHead">Quick Access Links</div>
+            <ul class="colContent">
+                <li><a href="#">Track Delivery</a>
+                </li>
+                <li><a href="#">My Account</a></li>
+                <li><a href="#">Chat Support</a></li>
+            </ul>
+        </div>
 
-    <script src="script.js"></script>
+        <div class="col">
+            <div class="colHead">Additional Features</div>
+            <ul class="colContent">
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Feedback</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+
+        <div class="col">
+            <div class="colHead">Explore</div>
+            <ul class="colContent">
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Privacy Policies</a></li>
+            </ul>
+        </div>
+
+        <div class="col">
+            <div class="colHead">Contact Us</div>
+            <ul class="colContent">
+                <li><a href="#">Social Media</a></li>
+                <li><a href="#">Newsletter</a></li>
+                <li><a href="#">Support Centre</a></li>
+                <li><a href="#">Help Desk</a></li>
+            </ul>
+        </div>
+    </div>
+
+        <script src="script.js"></script>
 </body>
+
 </html>
