--- a/Client/Pages/index.html
+++ b/Client/Pages/index.html
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DROMED</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="navBar">
-        <a href="#"><img src="../Assets/navLogo.jpg" alt=""></a>
+      <a href="#"><img src="../Assets/navLogo.jpg" alt="" /></a>
 
-        <div class="navContent">
-            <ul>
-                <li><a href="order.html">Order</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="homeService.html">Home Services</a></li>
-                <li><a href="realTracking.html">Real-Time Tracking</a></li>
-                <li><a href="" id="moreOpt">More Options ▼</a></li>
-            </ul>
-        </div>
+      <div class="navContent">
+        <ul>
+          <li><a href="order.html">Order</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="homeService.html">Home Services</a></li>
+          <li><a href="realTracking.html">Real-Time Tracking</a></li>
+          <li>
+            <div class="moreOpt" style="cursor: pointer">More Options ▼</div>
+          </li>
+        </ul>
+      </div>
 
-        <div class="navButtons">
-            <ul>
-                <li><a href="order.html"><button class="box1">Order Now!</button></a></li>
-                <li><a href="signUp.html"><button class="box2">Sign Up</button></a></li>
-                <li><a href="login.html"><button class="box2">Login</button></a></li>
-            </ul>
-        </div>
+      <div class="navButtons">
+        <ul>
+          <li>
+            <a href="order.html"><button class="box1">Order Now!</button></a>
+          </li>
+          <li>
+            <a href="signUp.html"><button class="box2">Sign Up</button></a>
+          </li>
+          <li>
+            <a href="login.html"><button class="box2">Login</button></a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <div class="dropdownNav">
-        <div class="col">
-            <div class="colHead">Quick Access Links</div>
-            <ul class="colContent">
-                <li><a href="#">Track Delivery</a>
-                </li>
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">Chat Support</a></li>
-            </ul>
-        </div>
+      <div class="col">
+        <div class="colHead">Quick Access Links</div>
+        <ul class="colContent">
+          <li><a href="#">Track Delivery</a></li>
+          <li><a href="#">My Account</a></li>
+          <li><a href="#">Chat Support</a></li>
+        </ul>
+      </div>
 
-        <div class="col">
-            <div class="colHead">Additional Features</div>
-            <ul class="colContent">
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Feedback</a></li>
-                <li><a href="#">Blog</a></li>
-            </ul>
-        </div>
+      <div class="col">
+        <div class="colHead">Additional Features</div>
+        <ul class="colContent">
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Feedback</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
 
-        <div class="col">
-            <div class="colHead">Explore</div>
-            <ul class="colContent">
-                <li><a href="#">Terms and Conditions</a></li>
-                <li><a href="#">Privacy Policies</a></li>
-            </ul>
-        </div>
+      <div class="col">
+        <div class="colHead">Explore</div>
+        <ul class="colContent">
+          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="#">Privacy Policies</a></li>
+        </ul>
+      </div>
 
-        <div class="col">
-            <div class="colHead">Contact Us</div>
-            <ul class="colContent">
-                <li><a href="#">Social Media</a></li>
-                <li><a href="#">Newsletter</a></li>
-                <li><a href="#">Support Centre</a></li>
-                <li><a href="#">Help Desk</a></li>
-            </ul>
-        </div>
+      <div class="col">
+        <div class="colHead">Contact Us</div>
+        <ul class="colContent">
+          <li><a href="#">Social Media</a></li>
+          <li><a href="#">Newsletter</a></li>
+          <li><a href="#">Support Centre</a></li>
+          <li><a href="#">Help Desk</a></li>
+        </ul>
+      </div>
     </div>
 
-        <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
