Addition of Hero Section

--- a/Client/Pages/index.html
+++ b/Client/Pages/index.html
@@ -1,82 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DROMED</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <div class="navBar">
-      <a href="#"><img src="../Assets/navLogo.jpg" alt="" /></a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DROMED</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-      <div class="navContent">
-        <ul>
-          <li><a href="order.html">Order</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="homeService.html">Home Services</a></li>
-          <li><a href="realTracking.html">Real-Time Tracking</a></li>
-          <li>
-            <div class="moreOpt" style="cursor: pointer">More Options ▼</div>
-          </li>
-        </ul>
-      </div>
+<body>
+  <div class="navBar">
+    <a href="#"><img src="../Assets/navLogo.jpg" alt="" /></a>
 
-      <div class="navButtons">
-        <ul>
-          <li>
-            <a href="order.html"><button class="box1">Order Now!</button></a>
-          </li>
-          <li>
-            <a href="signUp.html"><button class="box2">Sign Up</button></a>
-          </li>
-          <li>
-            <a href="login.html"><button class="box2">Login</button></a>
-          </li>
-        </ul>
-      </div>
+    <div class="navContent">
+      <ul>
+        <li><a href="order.html">Order</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="homeService.html">Home Services</a></li>
+        <li><a href="realTracking.html">Real-Time Tracking</a></li>
+        <li>
+          <div class="moreOpt" style="cursor: pointer">More Options ▼</div>
+        </li>
+      </ul>
     </div>
 
-    <div class="dropdownNav">
-      <div class="col">
-        <div class="colHead">Quick Access Links</div>
-        <ul class="colContent">
-          <li><a href="#">Track Delivery</a></li>
-          <li><a href="#">My Account</a></li>
-          <li><a href="#">Chat Support</a></li>
-        </ul>
-      </div>
+    <div class="navButtons">
+      <ul>
+        <li>
+          <a href="order.html"><button class="box1">Order Now!</button></a>
+        </li>
+        <li>
+          <a href="signUp.html"><button class="box2">Sign Up</button></a>
+        </li>
+        <li>
+          <a href="login.html"><button class="box2">Login</button></a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
-      <div class="col">
-        <div class="colHead">Additional Features</div>
-        <ul class="colContent">
-          <li><a href="#">FAQs</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Feedback</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </div>
-
-      <div class="col">
-        <div class="colHead">Explore</div>
-        <ul class="colContent">
-          <li><a href="#">Terms and Conditions</a></li>
-          <li><a href="#">Privacy Policies</a></li>
-        </ul>
-      </div>
-
-      <div class="col">
-        <div class="colHead">Contact Us</div>
-        <ul class="colContent">
-          <li><a href="#">Social Media</a></li>
-          <li><a href="#">Newsletter</a></li>
-          <li><a href="#">Support Centre</a></li>
-          <li><a href="#">Help Desk</a></li>
-        </ul>
-      </div>
+  <div class="dropdownNav">
+    <div class="col">
+      <div class="colHead">Quick Access Links</div>
+      <ul class="colContent">
+        <li><a href="#">Track Delivery</a></li>
+        <li><a href="#">My Account</a></li>
+        <li><a href="#">Chat Support</a></li>
+      </ul>
     </div>
 
-    <script src="script.js"></script>
-  </body>
+    <div class="col">
+      <div class="colHead">Additional Features</div>
+      <ul class="colContent">
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Feedback</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <div class="colHead">Explore</div>
+      <ul class="colContent">
+        <li><a href="#">Terms and Conditions</a></li>
+        <li><a href="#">Privacy Policies</a></li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <div class="colHead">Contact Us</div>
+      <ul class="colContent">
+        <li><a href="#">Social Media</a></li>
+        <li><a href="#">Newsletter</a></li>
+        <li><a href="#">Support Centre</a></li>
+        <li><a href="#">Help Desk</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="ribbon">
+    <div class="ribText">
+      <p style="color: darkgoldenrod;">Ready to get started?</p>
+      <p><a href="#">Sign up for FREE</a></p>
+    </div>
+    <div class="buttons">
+      <button class="bannerButton">Help</button>
+      <button class="bannerButton">Chat with us</button>
+    </div>
+  </div>
+
+  <div class="hero">
+    <div class="mainHeading">
+      <p>Emergency</p>
+      <p class="headHighlight" style="color: white;">DRONE SERVICES</p>
+      <p>at your</p>
+      <p class="headHighlight" style="color: #681b1b;">FINGERTIPS.</p>
+    </div>
+  </div>
+
+  <div class="section1">
+    <div class="secContent">
+      <div class="secHeading">
+        <p>Rapid Drone Deliveries for</p>
+        <p style="color: #681b1b;">Emergencies.</p>
+      </div>
+      <br>
+      <div class="secBody">
+        <p>In critical moments, every second counts. Our drone delivery services ensure that essential supplies reach
+          you faster than ever.</p>
+        <br>
+        <ul>
+          <li>Delivering essentials at lightning speed when you need it.</li>
+          <li>Efficiency that saves lives in urgent situations.</li>
+          <li>Trust us for quick and reliable emergency deliveries.</li>
+        </ul>
+      </div>
+      <br>
+      <br>
+      <button class="box1" style="margin: 3px;">Get Started</button>
+      <button class="box2">Learn More</button>
+    </div>
+    <img src="../Assets/pexels-photo-442587.webp" alt="">
+    
+  </div>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
