Addition of Newsletter Section and Footer

--- a/Client/Pages/index.html
+++ b/Client/Pages/index.html
@@ -121,7 +121,70 @@
       <button class="box2">Learn More</button>
     </div>
     <img src="../Assets/pexels-photo-442587.webp" alt="">
-    
+  </div>
+
+  <div class="section2">
+    <div class="sec2Heading">
+      Experience the future of emergency delivery with our innovative drone services.
+    </div>
+
+    <div class="sec2Content">
+      <div class="sec2Column">
+        <div class="sec2ColHead">Stay Informed with real-time tracking of your urgent deliveries.</div>
+        <br>
+        <div class="sec2ColBody">Our services ensure that you receive what you need, when you need it.</div>
+        <br>
+        <br>
+        <button style="cursor: pointer;">Learn More ➤</button>
+      </div>
+
+      <div class="sec2Column">
+        <div class="sec2ColHead">Get instant assistance with our friendly and efficient chatbot support.</div>
+        <br>
+        <div class="sec2ColBody">Our chatbot is available 24/7 to help you with your orders.</div>
+        <br>
+        <br>
+        <button style="cursor: pointer;">Chat Now ➤</button>
+      </div>
+
+      <div class="sec2Column">
+        <div class="sec2ColHead">Enjoy peace of mind with our reliable emergency delivery system.</div>
+        <br>
+        <div class="sec2ColBody">We prioritize your safety and convinience with our cutting-edge technology.</div>
+        <br>
+        <br>
+        <button style="cursor: pointer;">Sign Up ➤</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="subsSec">
+    <div class="secHeading">
+      <p>Stay Updated with</p>
+      <p style="color: #681b1b;">DROMED.</p>
+    </div>
+
+    <div class="subsInputSec">
+      <p>Subscribe to our newsletter for the latest updates and exclusive promotions.</p>
+      <p>Be the first to know about our innovative drone delivery services!</p>
+      <br>
+      <div class="emailInput">
+        <input type="text" placeholder="Enter your email">
+        <button>Subscribe</button>
+      </div>
+      <div class="tAndC">By clicking subscribe you are agreeing with our Terms and Conditions</div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="copyright">© 2025 DROMED All Rights Reserved </div>
+    <div class="footerLinks">
+      <ul>
+        <li>Privacy Policy</li>
+        <li>Terms And Conditions</li>
+        <li>Cookies Settings</li>
+      </ul>
+    </div>
   </div>
 
   <script src="script.js"></script>
